--- a/fb_clone/accounts/templates/accounts/login.html
+++ b/fb_clone/accounts/templates/accounts/login.html
@@ -27,10 +27,11 @@
           Forgotten password?
         </button>
       </div>
-      
+
     <hr class="my-4">
     <div class="text-center">
-        <a href="{% url 'signup' %}" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-4 rounded-lg inline-block">Create New Account</a>
+        <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-4 rounded-lg inline-block" type="button"
+          onclick="alert('This feature is disabled because this system is for testing purposes only.')">Create New Account</a>
 
     </div>
   </div>
